--- a/index.html
+++ b/index.html
@@ -1,31 +1,297 @@
 <!DOCTYPE html>
 <html>
 <head>
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-
-	<title></title>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+	<title>Pago</title>
 </head>
 <body>
-	<button class="btn">Hola</button>
+<style type="text/css">
 
-	<div class="row">
-		<div class="col-md-12">
-			<div class="col-md-4">
-				<div class="col-md-12">JUNTA DIRECTIVA DE PROPIETARIOS</div>
-				<div class="col-md-12">"Seguridad - Honestidad - Transparencia"</div>
-			</div>
-			<div class="col-md-4">NOMBRE</div>
-			<div class="col-md-2">TORRE</div>
-			<div class="col-md-2">DPTO</div>
-			<div class="col-md-3">DEUDA TOTAL</div>
-			<div class="col-md-1"></div>
-			<div class="col-md-2">A</div>
-			<div class="col-md-2">1004</div>
-		</div>
-		<div class="col-md-12">
-			<div class="col-md-4">DETALLE DE ILUMINACION</div>
-		</div>		
-	</div>
+	@font-face {
+    	font-family: Californian;
+    	src: url(./public/fonts/Californian_FB.ttf);
+	}
+	
+	body {
+		font-family: Californian;
+	}
 
+	.table>tbody>tr>td, .table>tbody>tr>th, .table>tfoot>tr>td, .table>tfoot>tr>th, .table>thead>tr>td, .table>thead>tr>th {
+		padding: 2px;
+	}
+
+	.detail-pay {
+	    color: #fff !important;
+	    background-color: #000 !important;	
+	    padding: 5px 15px !important;	
+	}
+	.items thead th{
+		background: #2e6da4;
+		color: #fff;
+	}
+
+	@media screen {
+	  #printSection {
+	      display: none;
+	  }
+	}
+
+	@media print {
+	  body * {
+	    visibility:hidden;
+	  }
+
+	
+	  #printSection, #printSection * {
+	    visibility:visible;
+	    font-family: Californian;
+	  }
+
+	  #printSection {
+		width: 100%;
+		margin: 0 auto;
+	  }
+
+	  #printSection {
+	    position:absolute;
+	    left:0;
+	    top:0;
+	  }
+	  #print {
+	  	display: none;
+	  }
+
+	  #close {
+	  	display: none;
+	  }
+	}
+</style>
+
+
+<div id="recibo" class="modal fade bs-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="classInfo" aria-hidden="true">
+  <div class="modal-dialog modal-lg">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">
+          ×
+        </button>
+        <h4 class="modal-title" id="classModalLabel">
+              Boleta del mes
+        </h4>
+      </div>
+      <div class="modal-body" id="printable">
+	      <div class="row">
+	      	<div class="col-xs-12 visible-xs text-center">
+	      		<div class="col-xs-6">
+	      			<img src="./public/images/innovecrt.png" alt="100px">
+	      		</div>
+	      		<div class="col-xs-6">
+	      			<img src="./public/images/ciudadnueva.png" alt="" width="100px;">
+	      		</div>
+	      	</div>
+	      	<div class="col-sm-3 hidden-xs">
+	      		<img src="./public/images/innovecrt.png" alt="">
+	      	</div>
+	      	<div class="col-sm-6">
+				<table class="table table-responsive boleta">
+					<tr>
+						<th colspan="2">PROPIETARIO:</th>
+						<td colspan="2">Bill Gates</td>
+					</tr>
+					<tr>
+						<th>CUOTA MES:</th>
+						<td>555 77 854</td>	
+						<th>DEUDA TOTAL:</th>
+						<td>555 77 854</td>						
+					</tr>
+					<tr>
+						<th colspan="2">CUENTA ABONAR:</th>
+						<td colspan="2">555 77 855</td>
+					</tr>
+					<tr>
+						<th colspan="2">WEBSITE:</th>
+						<td colspan="2">555 77 855</td>
+					</tr>
+					<tr>
+						<th colspan="2">MOROSIDAD:</th>
+						<td colspan="2">555 77 855</td>
+					</tr>						
+				</table>		  		
+	      	</div>
+	      	<div class="col-sm-3 hidden-xs">
+	      		<img src="./public/images/ciudadnueva.png" alt="">
+	      	</div>
+	      </div>
+	      <br/>
+	      <div class="row">
+	      	<div class="col-sm-10 col-md-offset-1">
+	      		<table class="table table-responsive boleta">
+					<tr>
+						<th>LECTURA PREVIA:</th>
+						<td>19928</td>
+						<th>VALOR M3:</th>
+						<td>3.39</td>
+						<th>AGUA MES:</th>
+					</tr>
+					<tr>
+						<th>LECTURA ACTUAL:</th>
+						<td>19936</td>
+						<th>CONSUMO:</th>
+						<td>8</td>
+						<th>S/. 50. 00</th>					
+					</tr>						
+				</table>
+	      	</div>
+	      <div class="row">
+	      	<div class="col-sm-10 col-md-offset-1">
+			  <div class="panel panel-default">
+			    <div class="panel-heading detail-pay text-center">Importes Globales - Condominio - Afectan # DPTS</div>
+			    <div class="panel-body">
+			    	<div class="row" style="margin-left: 0px; margin-right: 0px;">
+			    		<table class="table table-bordered items">
+			    			<div class="text-center"><b>Servicios</b></div>
+			    			<thead>
+			    				<th>Codigo/Suministro</th>
+			    				<th>Descripción</th>
+			    				<th>Total</th>
+			    			</thead>
+			    			<tbody>
+			    				<tr>
+			    					<td>AXLMA</td>
+			    					<td>Servicio asasas</td>
+			    					<td>10</td>
+			    				</tr>
+			    			</tbody>
+			    		</table>
+			    	</div>
+			    	<div class="row" style="margin-left: 0px; margin-right: 0px;">
+			    		<table class="table table-bordered items">
+			    			<div class="text-center"><b>Personal</b></div>
+			    			<thead>
+			    				<th>Codigo/Suministro</th>
+			    				<th>Descripción</th>
+			    				<th>Total</th>
+			    			</thead>
+			    			<tbody>
+			    				<tr>
+			    					<td>AXLMA</td>
+			    					<td>Servicio asasas</td>
+			    					<td>10</td>
+			    				</tr>
+			    			</tbody>
+			    		</table>
+			    	</div>			    	
+			    </div>
+			  </div>
+	      	</div>
+	      </div>
+	      <div class="row">
+	      	<div class="col-sm-10 col-md-offset-1">
+			  <div class="panel panel-default">
+			    <div class="panel-heading detail-pay text-center">Importe Grupal - Grupo - Descripcion Grupo - Afectan # DPTS</div>
+			    <div class="panel-body">
+			    	<div class="row" style="margin-left: 0px; margin-right: 0px;">
+			    		<table class="table table-bordered items">
+			    			<div class="text-center"><b>Servicios</b></div>
+			    			<thead>
+			    				<th>Codigo/Suministro</th>
+			    				<th>Descripción</th>
+			    				<th>Total</th>
+			    			</thead>
+			    			<tbody>
+			    				<tr>
+			    					<td>AXLMA</td>
+			    					<td>Servicio asasas</td>
+			    					<td>10</td>
+			    				</tr>
+			    			</tbody>
+			    		</table>
+			    	</div>			    	
+			    </div>
+			  </div>
+	      	</div>
+	      </div>
+	      <div class="row">
+	      	<div class="col-sm-10 col-md-offset-1">
+			  <div class="panel panel-default">
+			    <div class="panel-heading detail-pay text-center">Importe de Torre - Torre - Descripcion Torre - Afectan # DPTS</div>
+			    <div class="panel-body">
+			    	<div class="row" style="margin-left: 0px; margin-right: 0px;">
+			    		<table class="table table-bordered items">
+			    			<div class="text-center"><b>Servicios</b></div>
+			    			<thead>
+			    				<th>Codigo/Suministro</th>
+			    				<th>Descripción</th>
+			    				<th>Total</th>
+			    			</thead>
+			    			<tbody>
+			    				<tr>
+			    					<td>AXLMA</td>
+			    					<td>Servicio asasas</td>
+			    					<td>10</td>
+			    				</tr>
+			    			</tbody>
+			    		</table>
+			    	</div>			    	
+			    </div>
+			  </div>
+	      	</div>
+	      </div>	      	      
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-primary" id="print">
+          Print
+        </button>
+        <button type="button" class="btn btn-primary" data-dismiss="modal" id="close">
+          Close
+        </button>
+      </div>
+    </div>
+  </div>
+</div>
+
+
+
+<script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+<script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+<script type="text/javascript">
+	$('#recibo').modal({ show: true });
+	$('#print').click(function() {
+		printElement(document.getElementById("printable"));
+		window.print();
+	});
+
+
+function printElement(elem, append, delimiter) {
+    var domClone = elem.cloneNode(true);
+
+    var $printSection = document.getElementById("printSection");
+
+    if (!$printSection) {
+        var $printSection = document.createElement("div");
+        $printSection.id = "printSection";
+        document.body.appendChild($printSection);
+    }
+
+    if (append !== true) {
+        $printSection.innerHTML = "";
+    }
+
+    else if (append === true) {
+        if (typeof(delimiter) === "string") {
+            $printSection.innerHTML += delimiter;
+        }
+        else if (typeof(delimiter) === "object") {
+            $printSection.appendChlid(delimiter);
+        }
+    }
+
+    $printSection.appendChild(domClone);
+}
+
+
+//$('#print').trigger('click');
+</script>
 </body>
 </html>
