--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+	<link rel="stylesheet" href="./public/lib/bootstrap/dist/css/bootstrap.min.css">
 	<title>Pago</title>
 </head>
 <body>
@@ -69,7 +69,7 @@
 </style>
 
 
-<div id="recibo" class="modal fade bs-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="classInfo" aria-hidden="true">
+<div id="Boleta" class="modal fade bs-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="classInfo" aria-hidden="true">
   <div class="modal-dialog modal-lg">
     <div class="modal-content">
       <div class="modal-header">
@@ -143,6 +143,7 @@
 					</tr>						
 				</table>
 	      	</div>
+	      </div>
 	      <div class="row">
 	      	<div class="col-sm-10 col-md-offset-1">
 			  <div class="panel panel-default">
@@ -253,41 +254,42 @@
 
 
 
-<script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
-<script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+<script type="text/javascript" src="./public/lib/jquery/dist/jquery.min.js"></script>
+<script type="text/javascript" src="./public/lib/bootstrap/dist/js/bootstrap.min.js"></script>
 <script type="text/javascript">
-	$('#recibo').modal({ show: true });
-	$('#print').click(function() {
+	$('#Boleta').modal({ show: true });
+	var btnPrint = document.getElementById('print');
+
+	btnPrint.onclick = function() {
 		printElement(document.getElementById("printable"));
 		window.print();
-	});
-
+	};
 
 function printElement(elem, append, delimiter) {
     var domClone = elem.cloneNode(true);
 
-    var $printSection = document.getElementById("printSection");
+    var printSection = document.getElementById("printSection");
 
-    if (!$printSection) {
-        var $printSection = document.createElement("div");
-        $printSection.id = "printSection";
-        document.body.appendChild($printSection);
+    if (!printSection) {
+        var printSection = document.createElement("div");
+        printSection.id = "printSection";
+        document.body.appendChild(printSection);
     }
 
     if (append !== true) {
-        $printSection.innerHTML = "";
+        printSection.innerHTML = "";
     }
 
     else if (append === true) {
         if (typeof(delimiter) === "string") {
-            $printSection.innerHTML += delimiter;
+            printSection.innerHTML += delimiter;
         }
         else if (typeof(delimiter) === "object") {
-            $printSection.appendChlid(delimiter);
+            printSection.appendChlid(delimiter);
         }
     }
 
-    $printSection.appendChild(domClone);
+    printSection.appendChild(domClone);
 }
 
 
